@@ -192,7 +192,9 @@ DECLARE_FUN(cd9660);
 DECLARE_FUN(ffs);
 DECLARE_FUN(msdos);
 DECLARE_FUN(v7fs);
+#ifdef MAKEFS_HAMMER2
 DECLARE_FUN(hammer2);
+#endif
 #ifdef MAKEFS_EXFAT
 DECLARE_FUN(exfat);
 #endif
