@@ -1,3 +1,8 @@
+r6
+======
+- Add build option USE_HAMMER2=0
+- Add script/build_test.sh
+
 r5
 ======
 - Add top level src directory
@@ -11,6 +16,7 @@ r4
 r3
 ======
 - Add exFAT support using https://github.com/relan/exfat
+- Add build option USE_EXFAT=0
 
 r2
 ======
